# rerAI

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  ROADMAP.md  agent.py  eslint.config.js  langgraph.json  main.py  opencode.json  package.json  pyproject.toml
apps/backend/: .dockerignore  .env.example  Dockerfile  README.md  agent.py  app.py  langgraph.json  pyproject.toml  railway.json
apps/backend/scripts/: ingest_chroma_cloud.py
apps/backend/src/rerai_agent/: __init__.py  embeddings.py  env.py  factories.py  graph.py  hub.py  model_provider.py  persistence.py  prompts.py  registry.py
apps/backend/src/rerai_agent/subagents/: __init__.py  definitions.py
apps/backend/src/rerai_agent/tools/: __init__.py  config.py  development_site_lookup.py  geo.py  gis_tools.py  regulatory_tools.py  rera_tools.py  transit_tools.py  websearch.py
apps/backend/src/rerai_api/: __init__.py  app.py  auth.py  convex.py  db.py  finalization.py  orchestrator.py  ports.py  runtime.py
apps/backend/src/rerai_api/adapters/: db_event_store.py  langgraph.py
apps/backend/src/rerai_api/store/: __init__.py  _dialect.py  _engine.py  _records.py  _store.py
apps/backend/tests/: conftest.py  test_adapters_langgraph.py  test_development_site_lookup.py  test_fastapi_backend.py  test_geo.py  test_gis_tools.py  test_integration.py  test_regulatory_tools.py  test_rera_tools.py  test_transit_tools.py  test_websearch.py
apps/convex/: .gitignore  README.md  package.json
apps/convex/convex/: backend.ts  http.ts  langgraphProxy.ts  langgraphThreads.ts  messages.ts  preferences.ts  runState.ts  schema.ts  threads.ts  tsconfig.json  turns.ts  users.ts
apps/convex/convex/_generated/: api.d.ts
apps/convex/convex/lib/: auth.ts  threads.ts
apps/web/: .env.example  README.md  index.html  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/chat/: ports.ts  useChatOrchestrator.test.tsx  useChatOrchestrator.ts  useChatSession.ts
apps/web/src/components/: AuthScreen.tsx  Composer.test.tsx  Composer.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  InterruptDialog.test.ts  InterruptDialog.tsx  MarkdownContent.tsx  ReportPanel.test.tsx  ReportPanel.tsx  Transcript.test.tsx  Transcript.tsx  (+1 more)
data/: land_records_cache.json
docs/adr/: 0001-frontend-streaming-contract.md  0002-durable-turn-finalization.md
memory/: AGENT_KNOWLEDGE.md
scripts/: ingest_chroma_cloud.py
skills/permit-feasibility/: SKILL.md
subagents/: definitions.py
tests/: conftest.py  test_geo.py  test_gis_tools.py  test_integration.py  test_regulatory_tools.py  test_rera_tools.py  test_transit_tools.py
tools/: config.py  gis_tools.py  land_records_tools.py  regulatory_tools.py  rera_tools.py  transit_tools.py
(+17 files in other folders)
